<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">App Name</string>
    <string name="nav_sub_text">Subtitle</string>

    <!-- app pages url -->
    <string name="app_pages_url" translatable="false">http://path.to/app/pages/</string>
    <string name="no_pdf_url" translatable="false">https://docs.google.com/viewer?url=</string>

    <!-- main drawer -->
    <string name="logo" translatable="false">Logo</string>
    <string name="main_home">Start</string>
    <string name="main_menu_1">menu 1</string>
    <string name="main_menu_2">menu 2</string>
    <string name="main_menu_3">menu 3</string>
    <string name="main_menu_4">menu 4</string>
    <string name="sub_menu_title">Communication</string>
    <string name="sub_menu_1">Jobs</string>
    <string name="sub_menu_2">Contact / About Us</string>

    <!-- dot menu -->
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open Menu</string>
    <string name="navigation_drawer_close">Close Menu</string>
</resources>