<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/sym_contact_card"
            android:title="@string/main_home" />
        <item
            android:id="@+id/nav_menu1"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/main_menu_1" />
        <item
            android:id="@+id/nav_menu2"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/main_menu_2" />
        <item
            android:id="@+id/nav_menu3"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/main_menu_3" />
        <item
            android:id="@+id/nav_menu4"
            android:icon="@android:drawable/star_on"
            android:title="@string/main_menu_4" />
    </group>

    <item android:title="@string/sub_menu_title">
        <menu>
            <item
                android:id="@+id/nav_jobs"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/sub_menu_1" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@android:drawable/stat_notify_chat"
                android:title="@string/sub_menu_2" />
        </menu>
    </item>

</menu>
